tests/snapshots/integration__integration_tests__help__help_config.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
---
success: true
exit_code: 0
----- stdout -----
wt-config - Manage configuration and shell integration
Usage: wt config [OPTIONS] <COMMAND>

Commands:
  shell          Shell integration setup
  create         Create global configuration file
  list           List configuration files & locations
  refresh-cache  Refresh default branch from remote
  status         Manage branch status markers

Options:
  -C <path>
      Change working directory

  -v, --verbose
      Show commands and debug info

  -h, --help
      Print help (see a summary with '-h')

SETUP GUIDE:

1. Set up shell integration

   wt config shell install

   Or manually add to your shell config:
   eval "$(wt config shell init bash)"

2. (Optional) Create config file

   wt config create

   This creates ~/.config/worktrunk/config.toml with examples.

3. (Optional) Enable LLM commit messages

   Install: uv tool install -U llm
   Configure: llm keys set anthropic
   Add to config.toml:
 [commit-generation]
 command = "llm"    

LLM SETUP DETAILS:

For Claude:
   llm install llm-anthropic
   llm keys set anthropic
   llm models default claude-3.5-sonnet

For OpenAI:
   llm keys set openai

Use 'wt config list' to view your current configuration
Docs: https://llm.datasette.io/ | https://github.com/sigoden/aichat

----- stderr -----
