tests/snapshots/integration__integration_tests__help__help_page_merge.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - merge
    - "--help-page"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    RUST_LOG: warn
    SOURCE_DATE_EPOCH: "1735776000"
    TERM: alacritty
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
---
success: true
exit_code: 0
----- stdout -----
<!-- ⚠️ AUTO-GENERATED from `wt merge --help-page` — edit cli.rs to update -->

Merge the current branch into the default branch — like clicking "Merge pull request" on GitHub.

<figure class="demo">
<picture>
  <source srcset="/assets/docs/dark/wt-merge.gif" media="(prefers-color-scheme: dark)">
  <img src="/assets/docs/light/wt-merge.gif" alt="wt merge demo" width="1600" height="900">
</picture>
</figure>

## Examples

Merge to the default branch:

```bash
wt merge
```

Merge to a different branch:

```bash
wt merge develop
```

Keep the worktree after merging:

```bash
wt merge --no-remove
```

Preserve commit history (no squash):

```bash
wt merge --no-squash
```

Skip committing/squashing (rebase still runs unless --no-rebase):

```bash
wt merge --no-commit
```

## Pipeline

`wt merge` runs these steps:

1. **Squash** — Stages uncommitted changes, then combines all commits since target into one (like GitHub's "Squash and merge"). Use `--stage` to control what gets staged: `all` (default), `tracked`, or `none`. A backup ref is saved to `refs/wt-backup/<branch>`. With `--no-squash`, uncommitted changes become a separate commit and individual commits are preserved.
2. **Rebase** — Rebases onto target if behind. Skipped if already up-to-date. Conflicts abort immediately.
3. **Pre-merge hooks** — Hooks run after rebase, before merge. Failures abort. See [wt hook](@/hook.md).
4. **Merge** — Fast-forward merge to the target branch. Non-fast-forward merges are rejected.
5. **Pre-remove hooks** — Hooks run before removing worktree. Failures abort.
6. **Cleanup** — Removes the worktree and branch. Use `--no-remove` to keep the worktree. When already on the target branch or in the main worktree, the worktree is preserved.
7. **Post-merge hooks** — Hooks run after cleanup. Failures are logged but don't abort.

Use `--no-commit` to skip committing uncommitted changes and squashing; rebase still runs by default and can rewrite commits unless `--no-rebase` is passed. Useful after preparing commits manually with `wt step`. Requires a clean working tree.

## Local CI

For personal projects, pre-merge hooks open up the possibility of a workflow with much faster iteration — an order of magnitude more small changes instead of fewer large ones.

Historically, ensuring tests ran before merging was difficult to enforce locally. Remote CI was valuable for the process as much as the checks: it guaranteed validation happened. `wt merge` brings that guarantee local.

The full workflow: start an agent (one of many) on a task, work elsewhere, return when it's ready. Review the diff, run `wt merge`, move on. Pre-merge hooks validate before merging — if they pass, the branch goes to the default branch and the worktree cleans up.

```toml
[pre-merge]
test = "cargo test"
lint = "cargo clippy"
```

## See also

- [wt step](@/step.md) — Run individual operations (commit, squash, rebase, push)
- [wt remove](@/remove.md) — Remove worktrees without merging
- [wt switch](@/switch.md) — Navigate to other worktrees

## Command reference

```
wt merge - Merge worktree into target branch[0m
[0m
Squash & rebase, fast-forward target, remove the worktree.[0m

Usage: [1m[36mwt merge[0m [36m[OPTIONS][0m [36m[TARGET][0m

[1m[32mArguments:[0m
  [36m[TARGET][0m
          Target branch[0m
          [0m
          Defaults to default branch.[0m

[1m[32mOptions:[0m
      [1m[36m--no-squash[0m
          Skip commit squashing

      [1m[36m--no-commit[0m
          Skip commit and squash

      [1m[36m--no-rebase[0m
          Skip rebase (fail if not already rebased)

      [1m[36m--no-remove[0m
          Keep worktree after merge

      [1m[36m--no-verify[0m
          Skip hooks

  [1m[36m-y[0m, [1m[36m--yes[0m
          Skip approval prompts

      [1m[36m--stage[0m[36m [0m[36m<STAGE>[0m
          What to stage before committing [default: all]

          Possible values:
          - [1m[36mall[0m:     Stage everything: untracked files + unstaged tracked
            changes
          - [1m[36mtracked[0m: Stage tracked changes only (like [1mgit add -u[0m)
          - [1m[36mnone[0m:    Stage nothing, commit only what's already in the index

  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m
          Show commands and debug info
```

<!-- END AUTO-GENERATED from `wt merge --help-page` -->

----- stderr -----
