tests/snapshots/integration__integration_tests__help__help_remove_long.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - remove
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt remove - Remove worktree and branch
Usage: [1m[36mwt remove[0m [36m[OPTIONS][0m [36m[WORKTREES]...[0m

[1m[32mArguments:[0m
  [36m[WORKTREES]...[0m
          Worktree or branch (@ for current)

[1m[32mOptions:[0m
      [1m[36m--no-delete-branch[0m
          Keep branch after removal

  [1m[36m-D[0m, [1m[36m--force-delete[0m
          Delete unmerged branches

      [1m[36m--no-background[0m
          Run removal in foreground

  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m
          Show commands and debug info

Cleans up finished work by removing worktrees and their branches. Without arguments, removes the current worktree and returns to the main worktree.

[32mExamples[0m

Remove current worktree and branch:

  [2mwt remove[0m

Remove a specific worktree:

  [2mwt remove feature-branch[0m

Keep the branch after removing the worktree:

  [2mwt remove --no-delete-branch feature-branch[0m

Remove multiple worktrees:

  [2mwt remove old-feature another-branch[0m

Force-delete an unmerged branch:

  [2mwt remove -D experimental[0m

[32mBranch Deletion[0m

By default, branches are deleted only when their content is already integrated into the target branch (typically main). This works correctly with squash-merge and rebase workflows where commit ancestry isn't preserved but the file changes are.

The [2m-D[0m flag overrides this safety check and force-deletes unmerged branches. The [2m--no-delete-branch[0m flag prevents branch deletion entirely.

[32mBackground Removal[0m

Removal runs in the background by default — the command returns immediately so work can continue. Logs are written to [2m.git/wt-logs/{branch}-remove.log[0m.

The [2m--no-background[0m flag runs removal in the foreground (blocking).

[32mHow Arguments Are Resolved[0m

Arguments resolve using [1mpath-first lookup[0m:

1. Compute the expected path for the argument (using the configured path template)
2. If a worktree exists at that path, use it (regardless of what branch it's on)
3. Otherwise, treat the argument as a branch name

[1mExample[0m: If [2mrepo.foo/[0m exists but is on branch [2mbar[0m:

- [2mwt remove foo[0m removes [2mrepo.foo/[0m and the [2mbar[0m branch
- [2mwt remove bar[0m also works (falls back to branch lookup)

[1mShortcuts[0m: [2m@[0m (current worktree), [2m-[0m (previous worktree), [2m^[0m (main worktree)
