tests/snapshots/integration__integration_tests__help__help_root.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
---
success: true
exit_code: 0
----- stdout -----
wt - Git worktree management
Usage: wt [OPTIONS] <COMMAND>

Commands:
  config  Manage configuration and shell integration
  list    List worktrees and optionally branches
  switch  Switch to a worktree
  remove  Remove worktree and branch
  merge   Merge worktree into target branch

Options:
  -C <path>
      Change working directory

  -v, --verbose
      Show commands and debug info

  -h, --help
      Print help

  -V, --version
      Print version

----- stderr -----
